--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -20,9 +20,9 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.apache.shindig</groupId>
+    <groupId>org.gatein.shindig</groupId>
     <artifactId>shindig-project</artifactId>
-    <version>2.0.2</version>
+    <version>2.0.2-GTN-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
@@ -125,32 +125,32 @@ year=${year}
   </build>
   <dependencies>
     <dependency>
-      <groupId>org.apache.shindig</groupId>
+      <groupId>org.gatein.shindig</groupId>
       <artifactId>shindig-common</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
-      <groupId>org.apache.shindig</groupId>
+      <groupId>org.gatein.shindig</groupId>
       <artifactId>shindig-gadgets</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
-      <groupId>org.apache.shindig</groupId>
+      <groupId>org.gatein.shindig</groupId>
       <artifactId>shindig-social-api</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
-      <groupId>org.apache.shindig</groupId>
+      <groupId>org.gatein.shindig</groupId>
       <artifactId>shindig-features</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
-      <groupId>org.apache.shindig</groupId>
+      <groupId>org.gatein.shindig</groupId>
       <artifactId>shindig-extras</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
-      <groupId>org.apache.shindig</groupId>
+      <groupId>org.gatein.shindig</groupId>
       <artifactId>shindig-server</artifactId>
       <version>${project.version}</version>
       <type>war</type>
