--- a/extras/pom.xml
+++ b/extras/pom.xml
@@ -20,9 +20,9 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.apache.shindig</groupId>
+    <groupId>org.gatein.shindig</groupId>
     <artifactId>shindig-project</artifactId>
-    <version>2.0.2</version>
+    <version>2.0.2-GTN-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
@@ -101,15 +101,15 @@
   <dependencies>
     <!-- project dependencies -->
     <dependency>
-      <groupId>org.apache.shindig</groupId>
+      <groupId>org.gatein.shindig</groupId>
       <artifactId>shindig-common</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.apache.shindig</groupId>
+      <groupId>org.gatein.shindig</groupId>
       <artifactId>shindig-gadgets</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.apache.shindig</groupId>
+      <groupId>org.gatein.shindig</groupId>
       <artifactId>shindig-social-api</artifactId>
     </dependency>
     <!-- external depenencies -->
@@ -124,14 +124,14 @@
 
     <!-- test -->
     <dependency>
-      <groupId>org.apache.shindig</groupId>
+      <groupId>org.gatein.shindig</groupId>
       <artifactId>shindig-common</artifactId>
       <version>${project.parent.version}</version>
       <classifier>tests</classifier>
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.apache.shindig</groupId>
+      <groupId>org.gatein.shindig</groupId>
       <artifactId>shindig-social-api</artifactId>
       <version>${project.parent.version}</version>
       <classifier>tests</classifier>
