--- a/features/pom.xml
+++ b/features/pom.xml
@@ -21,9 +21,9 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.apache.shindig</groupId>
+    <groupId>org.gatein.shindig</groupId>
     <artifactId>shindig-project</artifactId>
-    <version>2.0.2</version>
+    <version>2.0.2-GTN-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
