--- a/java/server/pom.xml
+++ b/java/server/pom.xml
@@ -20,9 +20,9 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.apache.shindig</groupId>
+    <groupId>org.gatein.shindig</groupId>
     <artifactId>shindig-project</artifactId>
-    <version>2.0.2</version>
+    <version>2.0.2-GTN-SNAPSHOT</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
 
@@ -100,29 +100,29 @@
   <dependencies>
     <!-- project dependencies -->
     <dependency>
-      <groupId>org.apache.shindig</groupId>
+      <groupId>org.gatein.shindig</groupId>
       <artifactId>shindig-common</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.apache.shindig</groupId>
+      <groupId>org.gatein.shindig</groupId>
       <artifactId>shindig-common</artifactId>
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.apache.shindig</groupId>
+      <groupId>org.gatein.shindig</groupId>
       <artifactId>shindig-gadgets</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.apache.shindig</groupId>
+      <groupId>org.gatein.shindig</groupId>
       <artifactId>shindig-social-api</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.apache.shindig</groupId>
+      <groupId>org.gatein.shindig</groupId>
       <artifactId>shindig-features</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.apache.shindig</groupId>
+      <groupId>org.gatein.shindig</groupId>
       <artifactId>shindig-extras</artifactId>
     </dependency>
 
