--- a/pom.xml
+++ b/pom.xml
@@ -26,9 +26,9 @@
     <version>7</version>
   </parent>
 
-  <groupId>org.apache.shindig</groupId>
+  <groupId>org.gatein.shindig</groupId>
   <artifactId>shindig-project</artifactId>
-  <version>2.0.2</version>
+  <version>2.0.2-GTN-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>Apache Shindig Project</name>
@@ -492,19 +492,19 @@
       <dependencies>
         <!-- project dependencies -->
         <dependency>
-          <groupId>org.apache.shindig</groupId>
+          <groupId>org.gatein.shindig</groupId>
           <artifactId>shindig-gadgets</artifactId>
           <version>${project.version}</version>
         </dependency>
 
         <dependency>
-          <groupId>org.apache.shindig</groupId>
+          <groupId>org.gatein.shindig</groupId>
           <artifactId>shindig-social-api</artifactId>
           <version>${project.version}</version>
         </dependency>
 
         <dependency>
-          <groupId>org.apache.shindig</groupId>
+          <groupId>org.gatein.shindig</groupId>
           <artifactId>shindig-extras</artifactId>
           <version>${project.version}</version>
         </dependency>
@@ -1391,37 +1391,37 @@
     <dependencies>
       <!-- project dependencies -->
       <dependency>
-        <groupId>org.apache.shindig</groupId>
+        <groupId>org.gatein.shindig</groupId>
         <artifactId>shindig-features</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.apache.shindig</groupId>
+        <groupId>org.gatein.shindig</groupId>
         <artifactId>shindig-common</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.apache.shindig</groupId>
+        <groupId>org.gatein.shindig</groupId>
         <artifactId>shindig-gadgets</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.apache.shindig</groupId>
+        <groupId>org.gatein.shindig</groupId>
         <artifactId>shindig-server</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.apache.shindig</groupId>
+        <groupId>org.gatein.shindig</groupId>
         <artifactId>shindig-social-api</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.apache.shindig</groupId>
+        <groupId>org.gatein.shindig</groupId>
         <artifactId>shindig-extras</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.apache.shindig</groupId>
+        <groupId>org.gatein.shindig</groupId>
         <artifactId>shindig-common</artifactId>
         <version>${project.version}</version>
         <type>test-jar</type>
