--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,12 @@
 
   <properties>
 
+    <!-- ***************** -->
+    <!-- Repository Deployment URLs -->
+    <!-- ***************** -->
+    <jboss.releases.repo.url>https://repository.jboss.org/nexus/service/local/staging/deploy/maven2/</jboss.releases.repo.url>
+    <jboss.snapshots.repo.url>https://repository.jboss.org/nexus/content/repositories/snapshots/</jboss.snapshots.repo.url>
+
     <!-- maven-release-plugin -->
     <pushChanges>false</pushChanges>
     <version.release.plugin>2.2.1</version.release.plugin>
@@ -83,11 +89,16 @@
   <!-- D I S T R I B U T I O N  M A N A G E M E N T                           -->
   <!-- ====================================================================== -->
   <distributionManagement>
-    <!-- This is the technical website for Shindig 2.0.x -->
-    <site>
-      <id>apache.website</id>
-      <url>scp://people.apache.org/www/shindig.apache.org/shindig-2.0.x</url>
-    </site>
+    <repository>
+      <id>jboss-releases-repository</id>
+      <name>JBoss Releases Repository</name>
+      <url>${jboss.releases.repo.url}</url>
+    </repository>
+    <snapshotRepository>
+      <id>jboss-snapshots-repository</id>
+      <name>JBoss Snapshots Repository</name>
+      <url>${jboss.snapshots.repo.url}</url>
+    </snapshotRepository>
   </distributionManagement>
 
   <!-- ====================================================================== -->
