--- a/pom.xml
+++ b/pom.xml
@@ -49,9 +49,7 @@
     <jboss.snapshots.repo.url>https://repository.jboss.org/nexus/content/repositories/snapshots/</jboss.snapshots.repo.url>
 
     <!-- maven-release-plugin -->
-    <useReleaseProfile>false</useReleaseProfile>
     <autoVersionSubmodules>true</autoVersionSubmodules>
-    <arguments></arguments>
     <pushChanges>false</pushChanges>
     <version.release.plugin>2.2.1</version.release.plugin>
 
@@ -1106,6 +1104,12 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-release-plugin</artifactId>
           <version>${version.release.plugin}</version>
+          <!-- Override parent hardcoded configuration -->
+          <configuration>
+            <useReleaseProfile>false</useReleaseProfile>
+            <goals>deploy</goals>
+            <arguments>-P-apache-release</arguments>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
