--- a/extras/pom.xml
+++ b/extras/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <groupId>org.gatein.shindig</groupId>
     <artifactId>shindig-project</artifactId>
-    <version>2.0.2-Beta01</version>
+    <version>2.0.2-Beta02-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
