--- a/java/gadgets/pom.xml
+++ b/java/gadgets/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <groupId>org.gatein.shindig</groupId>
     <artifactId>shindig-project</artifactId>
-    <version>2.0.2-Beta03-SNAPSHOT</version>
+    <version>2.0.2-Beta03</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
 
