--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 
   <groupId>org.gatein.shindig</groupId>
   <artifactId>shindig-project</artifactId>
-  <version>2.0.2-Beta04-SNAPSHOT</version>
+  <version>2.0.2</version>
   <packaging>pom</packaging>
 
   <name>Apache Shindig Project</name>
