--- a/features/pom.xml
+++ b/features/pom.xml
@@ -23,7 +23,7 @@
   <parent>
     <groupId>org.gatein.shindig</groupId>
     <artifactId>shindig-project</artifactId>
-    <version>2.0.3-SNAPSHOT</version>
+    <version>2.0.3</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
