--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,18 @@
 
     <!-- What version of the API did we ship last -->
     <shindig.api.previous>1.0.1</shindig.api.previous>
+    <version.apache.commons-betwixt>0.8</version.apache.commons-betwixt>
+    <version.xpp3>1.1.4c</version.xpp3>
+    <version.xml-apis>1.3.04</version.xml-apis>
+    <version.apache.tomcat>6.0.29</version.apache.tomcat>
+    <version.org.slf4j>1.6.1</version.org.slf4j>
+    <version.caja.htmlparser>r4209</version.caja.htmlparser>
+    <version.oauth.core_oauth-provider>20100527</version.oauth.core_oauth-provider>
+    <version.oauth.core_oauth-httpclient4>20090913</version.oauth.core_oauth-httpclient4>
+    <version.rome.modules>0.3.2</version.rome.modules>
+    <version.apache.geronimo.specs>1.0.1</version.apache.geronimo.specs>
+    <version.apache.shiro>1.0.0-incubating</version.apache.shiro>
+    <version.javax.servlet.jstl>1.2</version.javax.servlet.jstl>
   </properties>
 
   <prerequisites>
@@ -1380,7 +1392,7 @@
       <dependency>
         <groupId>org.gatein</groupId>
         <artifactId>gatein-dep</artifactId>
-        <version>1.1.0-Beta06</version>
+        <version>1.2.0.Alpha06</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -1440,6 +1452,74 @@
         <version>current</version>
         <scope>test</scope>
       </dependency>
+
+      <!-- Dependencies that exists in gatein-dep 1.1.0-Beta06 but not in gatein-dep 1.2.0.Alpha05 -->
+      <dependency>
+        <groupId>commons-betwixt</groupId>
+        <artifactId>commons-betwixt</artifactId>
+        <version>${version.apache.commons-betwixt}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.tomcat</groupId>
+        <artifactId>el-api</artifactId>
+        <version>${version.apache.tomcat}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.tomcat</groupId>
+        <artifactId>jasper-el</artifactId>
+        <version>${version.apache.tomcat}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.geronimo.specs</groupId>
+        <artifactId>geronimo-stax-api_1.0_spec</artifactId>
+        <version>${version.apache.geronimo.specs}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.shiro</groupId>
+        <artifactId>shiro-web</artifactId>
+        <version>${version.apache.shiro}</version>
+      </dependency>
+      <dependency>
+        <groupId>xpp3</groupId>
+        <artifactId>xpp3_min</artifactId>
+        <version>${version.xpp3}</version>
+      </dependency>
+      <dependency>
+        <groupId>xml-apis</groupId>
+        <artifactId>xml-apis</artifactId>
+        <version>${version.xml-apis}</version>
+      </dependency>
+      <dependency>
+        <groupId>net.oauth.core</groupId>
+        <artifactId>oauth-provider</artifactId>
+        <version>${version.oauth.core_oauth-provider}</version>
+      </dependency>
+      <dependency>
+        <groupId>net.oauth.core</groupId>
+        <artifactId>oauth-httpclient4</artifactId>
+        <version>${version.oauth.core_oauth-httpclient4}</version>
+      </dependency>
+      <dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>jstl</artifactId>
+        <version>${version.javax.servlet.jstl}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-jdk14</artifactId>
+        <version>${version.org.slf4j}</version>
+      </dependency>
+      <dependency>
+        <groupId>caja</groupId>
+        <artifactId>htmlparser</artifactId>
+        <version>${version.caja.htmlparser}</version>
+      </dependency>
+      <dependency>
+        <groupId>rome</groupId>
+        <artifactId>modules</artifactId>
+        <version>${version.rome.modules}</version>
+      </dependency>
+
     </dependencies>
   </dependencyManagement>
 
