--- a/pom.xml
+++ b/pom.xml
@@ -939,7 +939,7 @@
       <dependency>
         <groupId>org.gatein</groupId>
         <artifactId>gatein-dep</artifactId>
-        <version>1.2.0.Beta01</version>
+        <version>1.2.0.Final</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
